--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -6,17 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".BusinessFragment">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
 
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/name"
+            android:minHeight="20dp"
+            android:padding="16dp"
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
+
+
+        <TextView
+            android:id="@+id/business_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/business_title"
+            android:minHeight="20dp"
+            android:padding="16dp"
+            android:textSize="30sp"
+            app:layout_constraintTop_toBottomOf="@id/name" />
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/wine_animation"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/business_title"
             app:lottie_autoPlay="false"
             app:lottie_loop="false"
             app:lottie_rawRes="@raw/animation" />
@@ -31,6 +54,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/wine_animation" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/open_gps_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="@string/open_gps"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/start_animation_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
